kube_1.18_demo/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nice-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: dummy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: empty-mind
          servicePort: 8081
  tls:
  - hosts:
    - dummy.com
    secretName: tls-secret
